--- a/modules/components/CondeInput/styles.css
+++ b/modules/components/CondeInput/styles.css
@@ -5,13 +5,27 @@
 .input__container {
     width: 100%;
     height: 100%;
+    position: relative;
+}
+
+.input__container img {
+    position: absolute;
+    width: 70px;
+    height: auto;
+    z-index: 100;
+    right: 10px;
+    bottom: 10px;
+    pointer-events: none;
+}
+
+.input__container .view-lines {
+    /* background-image: var(--img_url);
+    background-repeat: no-repeat;
+    background-size: 50px;
+    background-position: calc(100% - 10px) calc(100% - 10px); */
 }
 
 .input__container>textarea {
-    background-image: var(--img_url);
-    background-repeat: no-repeat;
-    background-size: 50px;
-    background-position: calc(100% - 10px) calc(100% - 10px);
     width: 100%;
     height: 100%;
     resize: none;
