agregando cdn monaco

--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@
     display: grid;
     grid-template-columns: 1fr 10px 1fr;
     grid-template-rows: 1fr 10px 1fr;
+    overflow: hidden;
 }
 
 .gutter-col {
