--- a/modules/components/CondeInput/styles.css
+++ b/modules/components/CondeInput/styles.css
@@ -2,6 +2,14 @@
     --img_url: url("../../../assets/images/css.png");
 }
 
+.editor>*,
+.monaco-editor>*,
+.overflow-guard,
+.overflow-guard> :nth-child(3) {
+    width: 100% !important;
+    height: 100% !important;
+}
+
 .input__container {
     width: 100%;
     height: 100%;
@@ -16,25 +24,4 @@
     right: 10px;
     bottom: 10px;
     pointer-events: none;
-}
-
-.input__container>textarea {
-    width: 100%;
-    height: 100%;
-    resize: none;
-    border: none;
-    outline: none;
-    background-color: #555;
-    color: white;
-    padding: 15px;
-    font-size: 18px;
-}
-
-.input__container>textarea::placeholder {
-    color: white;
-    font-size: 1.2em;
-}
-
-.input__container>textarea:focus {
-    outline: none;
 }
