--- a/modules/components/CondeInput/styles.css
+++ b/modules/components/CondeInput/styles.css
@@ -2,12 +2,14 @@
     --img_url: url("../../../assets/images/css.png");
 }
 
-.editor>*,
-.monaco-editor>*,
-.overflow-guard,
+.monaco-editor,
+.overflow-guard {
+    height: 100%;
+    width: 100% !important;
+}
+
 .overflow-guard> :nth-child(3) {
     width: 100% !important;
-    height: 100% !important;
 }
 
 .input__container {
